--- a/admin/src/main/resources/static/css/app-style.css
+++ b/admin/src/main/resources/static/css/app-style.css
@@ -50,9 +50,7 @@ html{
 }
 
 
-@-ms-viewport {
-	width: device-width
-}
+
 body {
    	background-color: #000;
     font-family: 'Roboto', sans-serif;
@@ -2998,7 +2996,7 @@ table.grid td {
 [class*="icheck-material"] {
   min-height: 22px;
   margin-top: 6px;
-  margin-bottom: 6px 
+  margin-bottom: 6px;
   padding-left: 0px; }
   [class*="icheck-material"] > label {
     padding-left: 29px !important;
